starting todos
